--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,18 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx nodemon",
+    "start": "node index.js"
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "axios": "^1.8.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   }
 }
